// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pharmacy Benefits should render Pharmacy Benefits correctly 1`] = `
<body>
  <div>
    <main
      class="flex flex-col justify-center items-center page"
    >
      <div
        class="flex flex-col h-175px w-full text-white justify-center items-center brand-gradient  "
      >
        <div
          class="flex flex-col items-start w-full app-content px-4"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <h1
            class="title-1 font-thin"
          >
             
            Pharmacy
          </h1>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
        </div>
      </div>
      <div
        class="flex flex-col app-content app-base-font-color"
      >
        <section
          class="flex flex-row items-start app-body "
        >
          <div
            class="flex flex-col"
          >
            <div
              class="card-main large-section"
            >
              <section>
                <h1
                  class="title-1 title-2 font-bold"
                >
                  Pharmacy Benefits
                </h1>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-1"
                  style="display: block;"
                >
                  You have a pharmacy card just for your prescription drugs. Here are some helpful things to know:
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row"
                >
                  <div
                    class="flex flex-col no-shrink"
                  >
                    <div
                      style="width: 5px; height: 5px; background-color: rgb(93, 193, 253); border-radius: 50px; margin-top: 7px; margin-right: 0px;"
                    />
                  </div>
                  <p
                    class="body-1 ml-4"
                    style="display: block;"
                  >
                    Coverage and claims for prescriptions are managed by your pharmacy benefit manager. That’s an independent company that specializes in these services.
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <div
                  class="flex flex-row"
                >
                  <div
                    class="flex flex-col no-shrink"
                  >
                    <div
                      style="width: 5px; height: 5px; background-color: rgb(93, 193, 253); border-radius: 50px; margin-top: 7px; margin-right: 0px;"
                    />
                  </div>
                  <p
                    class="body-1 ml-4"
                    style="display: block;"
                  >
                    If you have questions or need a new card, call 1-888-816-1680.
                  </p>
                </div>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <span
                  class="rich-text body-1 md:!inline-flex"
                >
                  <span>
                    You can also visit  
                  </span>
                  <span>
                    <a
                      aria-label="TennCare’s site for more info"
                      href="https://www.tn.gov/tenncare/members-applicants/pharmacy.html"
                      style="display: block;"
                    >
                      <button
                        class="flex flex-row link-container link hover:!underline !flex p-0"
                        style="max-width: max-content; height: auto; display: block;"
                        tabindex="-1"
                        type="button"
                      >
                        <p
                          class="link undefined"
                        >
                          TennCare’s site for more info
                        </p>
                        <p
                          class="ml-1"
                        >
                          <img
                            alt="external"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </p>
                      </button>
                    </a>
                  </span>
                  <span>
                    on prescription coverage.
                  </span>
                </span>
              </section>
            </div>
          </div>
        </section>
      </div>
    </main>
  </div>
</body>
`;

exports[`Pharmacy Benefits should render Ui properly for Freedom MA BlueAdvantage member 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="flex flex-col justify-center items-center page"
      >
        <div
          class="flex flex-col h-175px w-full text-white justify-center items-center brand-gradient  "
        >
          <div
            class="flex flex-col items-start w-full app-content px-4"
          >
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <h1
              class="title-1 font-thin"
            >
               
              Pharmacy
            </h1>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
          </div>
        </div>
        <div
          class="flex flex-col app-content app-base-font-color"
        >
          <section
            class="flex flex-row items-start app-body "
          >
            <div
              class="flex flex-col"
            >
              <div
                class="card-main large-section"
              >
                <section>
                  <h1
                    class="title-1 title-2"
                  >
                    Pharmacy Benefits
                  </h1>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <p
                    class="body-1"
                    style="display: block;"
                  >
                    Your plan does not include Medicare Part D prescription drug coverage. Please consult your Evidence of Coverage (EOC) for more information on medical benefits.
                  </p>
                  <span
                    style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                  />
                  <a
                    aria-label="View All Plan Documents"
                    href="/benefits/planDocuments"
                    style="display: block;"
                  >
                    <button
                      class="flex flex-row link-container link hover:!underline pl-0"
                      style="max-width: max-content; height: auto; display: block;"
                      tabindex="-1"
                      type="button"
                    >
                      <p
                        class="link undefined"
                      >
                        View All Plan Documents
                      </p>
                    </button>
                  </a>
                </section>
              </div>
            </div>
          </section>
          <section
            class="flex flex-row items-start app-body "
          >
            <div
              class="flex flex-col"
            >
               
              <div
                class="card-main large-section skip-underscore"
              >
                <div
                  class="flex flex-col"
                >
                  <img
                    alt="Shopping Credit Icon"
                    class="size-10 block md:hidden"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                  <div
                    class="flex flex-row"
                  >
                    <img
                      alt="Shopping Credit Icon"
                      class="size-10 mt-3 mr-2 hidden md:block"
                      data-nimg="1"
                      decoding="async"
                      height="40"
                      loading="lazy"
                      src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                      srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                      style="color: transparent;"
                      width="40"
                    />
                    <section
                      class="flex justify-start self-start my-health-link"
                    >
                      <span
                        class="rich-text body-1 undefined"
                      >
                        <div
                          class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4"
                        >
                          <a
                            class="!flex pt-0 pl-0 ml-2"
                            href=""
                          >
                             
                            <p
                              class="font-bold primary-color"
                            >
                              Shop Over-the-Counter Items
                            </p>
                            <img
                              alt=""
                              class="link flex ml-2"
                              data-nimg="1"
                              decoding="async"
                              height="40"
                              loading="lazy"
                              src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                              srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                              style="color: transparent;"
                              width="40"
                            />
                          </a>
                        </div>
                      </span>
                    </section>
                  </div>
                  <p
                    class="body-1 body-1 md:ml-14 ml-2"
                    style="display: block;"
                  >
                    You get a quarterly allowance for over-the-counter (OTC) items. You can spend it on things like cold medicine, vitamins and more. And once you set up an account, you can even shop for those items online. Set up or log in to your online account to get OTC items shipped right to your door.
                  </p>
                </div>
              </div>
            </div>
          </section>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="flex flex-col justify-center items-center page"
    >
      <div
        class="flex flex-col h-175px w-full text-white justify-center items-center brand-gradient  "
      >
        <div
          class="flex flex-col items-start w-full app-content px-4"
        >
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <h1
            class="title-1 font-thin"
          >
             
            Pharmacy
          </h1>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
        </div>
      </div>
      <div
        class="flex flex-col app-content app-base-font-color"
      >
        <section
          class="flex flex-row items-start app-body "
        >
          <div
            class="flex flex-col"
          >
            <div
              class="card-main large-section"
            >
              <section>
                <h1
                  class="title-1 title-2"
                >
                  Pharmacy Benefits
                </h1>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <p
                  class="body-1"
                  style="display: block;"
                >
                  Your plan does not include Medicare Part D prescription drug coverage. Please consult your Evidence of Coverage (EOC) for more information on medical benefits.
                </p>
                <span
                  style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
                />
                <a
                  aria-label="View All Plan Documents"
                  href="/benefits/planDocuments"
                  style="display: block;"
                >
                  <button
                    class="flex flex-row link-container link hover:!underline pl-0"
                    style="max-width: max-content; height: auto; display: block;"
                    tabindex="-1"
                    type="button"
                  >
                    <p
                      class="link undefined"
                    >
                      View All Plan Documents
                    </p>
                  </button>
                </a>
              </section>
            </div>
          </div>
        </section>
        <section
          class="flex flex-row items-start app-body "
        >
          <div
            class="flex flex-col"
          >
             
            <div
              class="card-main large-section skip-underscore"
            >
              <div
                class="flex flex-col"
              >
                <img
                  alt="Shopping Credit Icon"
                  class="size-10 block md:hidden"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
                <div
                  class="flex flex-row"
                >
                  <img
                    alt="Shopping Credit Icon"
                    class="size-10 mt-3 mr-2 hidden md:block"
                    data-nimg="1"
                    decoding="async"
                    height="40"
                    loading="lazy"
                    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                    style="color: transparent;"
                    width="40"
                  />
                  <section
                    class="flex justify-start self-start my-health-link"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <div
                        class="flex flex-row body-1 flex-grow md:!flex !block align-top mt-4"
                      >
                        <a
                          class="!flex pt-0 pl-0 ml-2"
                          href=""
                        >
                           
                          <p
                            class="font-bold primary-color"
                          >
                            Shop Over-the-Counter Items
                          </p>
                          <img
                            alt=""
                            class="link flex ml-2"
                            data-nimg="1"
                            decoding="async"
                            height="40"
                            loading="lazy"
                            src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                            srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                            style="color: transparent;"
                            width="40"
                          />
                        </a>
                      </div>
                    </span>
                  </section>
                </div>
                <p
                  class="body-1 body-1 md:ml-14 ml-2"
                  style="display: block;"
                >
                  You get a quarterly allowance for over-the-counter (OTC) items. You can spend it on things like cold medicine, vitamins and more. And once you set up an account, you can even shop for those items online. Set up or log in to your online account to get OTC items shipped right to your door.
                </p>
              </div>
            </div>
          </div>
        </section>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
